--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -30,10 +30,10 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <SccProjectName>%24/Librerias/CodigoFuente/x32/Orbita/Orbita.Comunicaciones</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccAuxPath>http://01x0019:8080/tfs/orbitasoftware</SccAuxPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -86,6 +86,18 @@
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\Comun\Comunicaciones\opcrcw.da.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Trazabilidad, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Utiles, Version=13.150.8.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Winsock, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Winsock.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -161,20 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagramComs.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
-      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
-      <Name>Orbita.Trazabilidad</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
-      <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
-      <Name>Orbita.Utiles</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Winsock\Orbita.Winsock.vbproj">
-      <Project>{71BD7FF7-F873-49B9-8DC2-C41F909D7300}</Project>
-      <Name>Orbita.Winsock</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
