--- a/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
@@ -58,7 +58,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\Orbita.Trazabilidad.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Trazabilidad.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
