--- a/CodigoFuente/x32/Orbita/Orbita.Compresion/Orbita.Compresion.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Compresion/Orbita.Compresion.csproj
@@ -49,7 +49,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\Release\Orbita.Compresion.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.Compresion.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
