--- a/CodigoFuente/x32/Orbita/Orbita.MS/Orbita.MS.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.MS/Orbita.MS.csproj
@@ -49,7 +49,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <DocumentationFile>bin\Release\Orbita.MS.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Orbita.MS.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="hasp_net_windows">
