--- a/CodigoFuente/x32/Orbita/Orbita.Xml/Orbita.Xml.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Xml/Orbita.Xml.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CXml.cs" />
     <Compile Include="Core\OAlmacenXML.cs" />
     <Compile Include="Core\OExtensionXML.cs" />
     <Compile Include="Core\OConvertibleXML.cs" />
