--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
@@ -259,7 +259,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.VA.Comun\Orbita.VA.Comun.csproj">
+      <Project>{CC36FE63-3F16-4355-A11D-F0926DFBC977}</Project>
+      <Name>Orbita.VA.Comun</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)Orbita.VA.Funciones.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I
