--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
@@ -111,24 +111,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Comun\Orbita\Orbita.Comunicaciones.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.Controles.Comunes">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Comunes.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Controles.Contenedores">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Contenedores.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Controles.Estilos">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Estilos.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Controles.Grid">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Grid.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Controles.Menu">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Menu.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Controles.Shared">
-      <HintPath>..\..\Comun\Orbita\Orbita.Controles.Shared.dll</HintPath>
-    </Reference>
     <Reference Include="Orbita.Trazabilidad, Version=13.68.3.1, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
@@ -405,6 +387,36 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Clases\Configuración\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.Controles.Comunes\Orbita.Controles.Comunes.csproj">
+      <Project>{D66C367A-47B7-4464-93D6-92794E4A57C8}</Project>
+      <Name>Orbita.Controles.Comunes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Contenedores\Orbita.Controles.Contenedores.csproj">
+      <Project>{B953E685-3E2D-4F93-BB80-805427BBB8A2}</Project>
+      <Name>Orbita.Controles.Contenedores</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Editor\Orbita.Controles.Editor.csproj">
+      <Project>{AF6AFAC6-159A-4C37-8C74-4D8609088C05}</Project>
+      <Name>Orbita.Controles.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Estilos\Orbita.Controles.Estilos.csproj">
+      <Project>{69BCFE99-17D1-4F08-AD49-95C395D247A6}</Project>
+      <Name>Orbita.Controles.Estilos</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Grid\Orbita.Controles.Grid.csproj">
+      <Project>{34B632DA-E0C4-4F27-AAFD-AFAD64604BFA}</Project>
+      <Name>Orbita.Controles.Grid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Menu\Orbita.Controles.Menu.csproj">
+      <Project>{3FC7CCF4-13B4-4B2B-95A9-CC178C85C343}</Project>
+      <Name>Orbita.Controles.Menu</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Shared\Orbita.Controles.Shared.csproj">
+      <Project>{D104B7D1-93CB-46AE-8F84-AA68BB3B2C5E}</Project>
+      <Name>Orbita.Controles.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
