--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
@@ -263,6 +263,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Variables\Custom\OrbitaGraficaVariableDouble.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Variables\Custom\OrbitaGraficaVariableDouble.Designer.cs">
+      <DependentUpon>OrbitaGraficaVariableDouble.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Variables\Custom\OrbitaGraficaVariableInt.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Variables\Custom\OrbitaGraficaVariableInt.Designer.cs">
+      <DependentUpon>OrbitaGraficaVariableInt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Variables\Custom\CtrlMonitorizacionVariablesTactil.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -440,6 +452,14 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Variables\Custom\OrbitaGraficaVariableDouble.resx">
+      <DependentUpon>OrbitaGraficaVariableDouble.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Variables\Custom\OrbitaGraficaVariableInt.resx">
+      <DependentUpon>OrbitaGraficaVariableInt.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Variables\Custom\CtrlMonitorizacionVariablesTactil.resx">
