--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -141,12 +141,12 @@
     <Compile Include="Dispositivos\ODispositivoES.cs" />
     <Compile Include="Dispositivos\ODispositivoILBKPhoenix.cs" />
     <Compile Include="Dispositivos\ODispositivoMCUSB.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ES.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGLPR.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOCR.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOSL.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOSO.cs" />
-    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGTRA.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ES.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ESGLPR.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ESGOCR.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ESGOSL.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ESGOSO.cs" />
+    <Compile Include="Dispositivos\Siemens1200ES\ODispositivoSiemens1200ESGTRA.cs" />
     <Compile Include="Custom\Mensajes\Base\OcsMensajeEscrituraBase.cs" />
     <Compile Include="Custom\Mensajes\Base\OcsMensajeLecturaBase.cs" />
     <Compile Include="Custom\Mensajes\Interfaces\IOcsMensajeComunicaciones.cs" />
@@ -167,12 +167,12 @@
     <Compile Include="Protocolos\OPC\Info\OOPCEnlaces.cs" />
     <Compile Include="Protocolos\Phoenix\OProtocoloTCPPhoenixES.cs" />
     <Compile Include="Protocolos\Protocolo.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemens.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPR.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPROS.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCR.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCROS.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateTrafficES.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemens.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemensGateLPR.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemensGateLPROS.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemensGateOCR.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemensGateOCROS.cs" />
+    <Compile Include="Protocolos\Siemens1200ES\OProtocoloTCPSiemensGateTrafficES.cs" />
     <Compile Include="Protocolos\Tcp\Colecciones\ThreadSafeSortedList.cs" />
     <Compile Include="Protocolos\Tcp\Comunicacion\Canales\CanalComunicacionBase.cs" />
     <Compile Include="Protocolos\Tcp\Comunicacion\Canales\CanalComunicacionEventArgs.cs" />
